manifests/placeholder/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: placeholder
  labels:
    app: placeholder
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: placeholder
