manifests/placeholder/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: placeholder
  annotations:
   kubernetes.io/tls-acme: "true"
   kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - satanic.link
    secretName: satanic-link-tls
  rules:
  - host: satanic.link
    http:
      paths:
      - path: /
        backend:
          serviceName: placeholder
          servicePort: 80
